--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "WiFi Connect",
-  "name": "Easy WiFi setup for Linux devices from your mobile phone or laptop",
+  "short_name": "luca - Locations",
+  "name": "luca - Locations",
   "icons": [
     {
-      "src": "favicon.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
